Fix bug with z-index

--- a/src/1-app/globals.css
+++ b/src/1-app/globals.css
@@ -57,7 +57,7 @@
   header,
   footer,
   main > div {
-    @apply relative flex flex-col items-center justify-start bg-top bg-no-repeat px-2 sm:px-4 md:px-8;
+    @apply relative flex flex-col items-center justify-start bg-top bg-no-repeat px-4 sm:px-4 md:px-8;
   }
 
   header > div,
